--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: midnight
+theme: jekyll-theme-minimal
 title: Concept Welder
 author: Sankalpa Abeygunawardhana
 description: Sankalpa's blog
